tests/stage3/semantic_call_arg_count_extra.err
type error
line: 8
argument count mismatch
expected: 1
got: 2
