tests/stage3/semantic_call_arg_count_extra.imp
module app.main

function id(a: i32) -> i32 {
    return a
}

function main() {
    print(id(1, 2))
}
